# Wukong_serverless

./: README.md  index.html
AWS Lambda Task Executor/TaskExecutor/: function.py
Static Scheduler/: pyproject.toml  simple-test-app.py
Static Scheduler/install/: aws_setup.py  aws_teardown.py  redis.conf  wukong_setup_config.yaml
Static Scheduler/wukong/: batched_lambda_invoker.py  scheduler.py  wukong-config.yaml.template
Static Scheduler/wukong/testing/: README.md  __init__.py  __main__.py  evaluation.py  experiment.py  message.py
Static Scheduler/wukong/testing/experiments/: __init__.py  gemm.py  generate_random_array.py  linear_dag.py  svd1.py  svd2.py  tree_reduction.py  tsqr.py
Static Scheduler/wukong/testing/standalone_scripts/: tests.py  tr.py
