[project]
name = "wukong"
version = "0.0.1"
description = "Serverless linear algebra and data analytics"
requires-python = ">= 3.9"
dependencies = [
	"click >= 6.6",
	"cloudpickle >= 0.2.2",
	"dask >= 0.18.0",
	"msgpack",
	"psutil >= 5.0",
	"six",
	"sortedcontainers !=2.0.0, !=2.0.1",
	"tblib",
	"pytest ",
	"moto ",
	"mock",
	"toolz >= 0.7.4",
	"tornado >= 5",
	"zict >= 0.1.3",
	"uhashring",
	"matplotlib",
	"ujson",
	"futures; python_version < '3.0'",
	"singledispatch; python_version < '3.4'",
	"pyyaml",
	"boto3",
	"ntplib",
	"redis",
	"bokeh",
	"aioredis==1.*",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["wukong"]
